# iecdt_deep_learning_lab

./: README.md  pyproject.toml  train_autoencoder.py  train_resnet.py
config_ae/: train.yaml
config_ae/hydra/launcher/: slurm.yaml
config_resnet/: train.yaml
config_resnet/hydra/launcher/: slurm.yaml
iecdt_lab/: data_loader.py
ssh_config_example/: config
